@@ -3,6 +3,7 @@ Revision history for Whelk
 {{$NEXT}}
 	- Framework no longer assumes that controller is a subclass of Kelp, allowing custom base controllers
 	- Added documentation for Whelk::Wrapper
+	- Added documentation for Whelk::Formatter
 
 0.04 - 2024-07-06
 	- Default and example values are now validated before they are put into OpenAPI document
